<resources>
    <string name="app_name">Aplikasi Covid19 RSBK</string>
    <string name="title">Aplikasi Penilaian Resiko Dan Kecemasan Mental</string>
    <string name="pernah">Pernah</string>
    <string name="tidak_pernah">Tidak Pernah</string>
    <string name="gejala_1">Apakah dalam 2 minggu ini saudara/i pernah mengalami gejala Covid-19 ? (seperti batuk, sesak napas, demam, dll)</string>
    <string name="resiko_title">Penilaian Resiko Pribadi</string>
    <string name="resiko_subtitle">Silahkan isi form berikut</string>
    <string name="riwayat">Apakah anda mempunyai riwayat perjalanan keluar negeri atau kota - kota lain yang terjangkit Covid-19?</string>
    <string name="radius">Apakah dalam radius 3 Km dari posisi anda ada ODP/PDP/Positif atau bahkan jenazah yang dikubur sesuai protokol Covid-19 ?</string>
    <string name="jenazah">Apakah anda pernah melakukan kontak dengan ODP/PDP/Positif atau bahkan jenazah yang dikubur sesuai protokol Covid-19 ?</string>
    <string name="desinfektan">Apakah dirumah anda dilakukan penyemprotan disinfektan?</string>
    <string name="physical_distancing">Apakah masyarakat di lingkungan anda melakukan physical distancing?</string>
    <string name="riwayat_kontak">Apakah anda memiliki riwayat kontak dengan banyak orang dalam suatu kerumunan?</string>
    <string name="karantina">Apakah anda telah melakukan karantina mandiri selama 14 hari di kediaman anda ?</string>
    <string name="pencegahan">Apakah anda telah menerapkan prinsip pencegahan Covid-19?</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="ada">Ada</string>
    <string name="tidak_ada">Tidak Ada</string>
    <string name="kecemasan_title">Penilaian Tingkat Kecemasan</string>
    <string name="note_kecemasan">0 : Tidak ada Gejala; 1 : satu dari gejala yang ada; 2 : Separuh dari gejala yang ada; 3 : Berat; 4 : Sangat Berat</string>
    <string name="ansietas">Perasaan Ansietas (Cemas, firasat buruk, takut akan pilihan sendiri)</string>
    <string name="tegang">Ketegangan (merasa ketegangan, lesu, tidak bisa istirahat dengan tenang, mudah terkejut, gelisah)</string>
    <string name="takut">Ketakutan (Pada gelap, pada orang asing, ditinggal sendiri, pada keramaian lalu lintas, pada kerumunan orang banyak)</string>
    <string name="gangguan">Gangguan tidur (sulit tidur, terbangun di malam hari, tidak nyenyak, bangun dengan lesu, banyak mimpi)</string>
    <string name="depresi">Perasaan depresi (hilangnya minat, berkurangnya kesenangan pada hobi, sedih, bangun dini hari)</string>
    <string name="somatik">Gejala somatik otot (sakit dan nyeri otot)</string>
    <string name="kardio">Gejala kardiovaskulir (berdebar, nyeri di dada, denyut nadi mengeras)</string>
    <string name="respiratori">Gejala respiratori (rasa tertekan di dada, perasaan tercekik, sering sesak napas)</string>
    <string name="gastro">Gejala gastrointestinal (sulit menelan, perut perih, kembung, mual)</string>
    <string name="otonom">Gejala otonom (mulut kering, muka merah, mudah berkeringat, pusing, sakit kepala)</string>
    <string name="tingkah">Tingkah laku pada saat berbicara dengan orang lain (gelisah, tidak tenang, jari gemetar, muka tegang)</string>
    <string name="tv_skip">skip</string>
    <string name="tv_next">next</string>
    <string name="mulai">Mulai</string>
    <string name="desc_1">Aplikasi ini akan membantu anda untuk melihat seberapa besar resiko anda terpapar virus Covid-19 dan seberapa berat tingkat kecemasan mental anda</string>
    <string name="desc_2">Dalam masa pandemi ini, banyak faktor yang akan menyebabkan kita terpapar virus Covid-19. Dengan aplikasi ini, anda dapat mengetahui seberapa besar resiko anda terpapar virus Covid-19.</string>
    <string name="title_3">Penilaian Tingkat Kecemasan Mental</string>
    <string name="desc_3">Selain kesehatan fisik, kita sering kali melupakan mengenai kesehatan mental kita. Dalam masa pandemi ini, kesehatan mental juga sama pentingnya, karena kesehatan mental kita akan mempengaruhi ketahanan fisik kita. Dengan aplikasi ini, anda dapat mengetahui tingkta kecemasan mental diri anda.</string>
</resources>